--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ build/
 
 ### VS Code ###
 .vscode/
+src/main/java/com/xdavide9/turbobuy/aws/IAMCredentials.java
+
+### Properties ###
+application.properties
