--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity5</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk</artifactId>
+            <version>1.12.334</version>
+        </dependency>
     </dependencies>
 
     <build>
